# aura-core

./: .gitignore  CONTRIBUTING.md  README.md  aura-architecture.md  pyproject.toml
.github/workflows/: commitlint.yml  gitleaks.yml  python-quality.yml
adr/: 0001-cloud-native-with-edge-fallback.md  0002-single-vehicle-scope.md  0003-langgraph-over-langchain.md  0004-qdrant-over-pinecone.md  0005-vllm-over-triton.md  0006-redpanda-over-kafka.md  0007-selective-kubernetes.md  0008-dual-repo-strategy.md  README.md  _template.md
